--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.4.4",
+    "@react-navigation/material-top-tabs": "^5.2.4",
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/stack": "^5.3.5",
     "axios": "^0.19.2",
@@ -22,6 +23,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
